SHRI, alignment fix

--- a/frontend/src/pages/OurTeam.css
+++ b/frontend/src/pages/OurTeam.css
@@ -130,7 +130,7 @@
 
 /* Responsive */
 
-@media (min-width: 1280px) and (max-width: 1380px) {
+@media (min-width: 1260px) {
   .FOT-section {
     padding-top: 45px;
   }
